<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name" translate="false">MOBWAL</string>
	<string name="app_name_before" translate="false">Mobile</string>
	<string name="app_name_after" translate="false">Walker</string>
	<string name="app_tag" translate="false">Result only</string>
	<string name="ok">OK</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="undo">Cancellation</string>
	<string name="menu_import_task">Importing tasks</string>
	<string name="menu_route">Routes</string>
	<string name="menu_point">Points</string>
	<string name="menu_settings">Settings</string>
	<string name="about_header">About the app</string>
	<string name="sync_header">Interface</string>
	<string name="app_version">Application version</string>
	<string name="copyright">Copyright © 2021 Aleksandr Krasnov. All rights reserved.</string>
	<string name="pin_code_fail">The code is incorrect</string>
	<string name="pin_settings">Pin code</string>
	<string name="pin_settings_summary_on">Access to the application by PIN-code is activated.</string>
	<string name="pin_settings_summary_off">Not activated.</string>
	<string name="pin_code_empty">Not specified.</string>
	<string name="layout">Sample</string>
	<string name="layout_summary">The default form template.</string>
	<string name="error_reporting">Send bug reports?</string>
	<string name="error_reporting_full">The mobile app uses Firebase Crashlytics to analyze errors. Allow submitting bug reports to Firebase?</string>
	<string name="error_reporting_summary_off">Bug reports will be sent to Firebase servers.</string>
	<string name="error_reporting_summary_on">Error reports are sent to Firebase servers.</string>
	<string name="reset_settings">Reset settings</string>
	<string name="reset_settings_summary">The application settings will be reset to their default values.</string>
	<string name="reset_settings_confirm">Are you sure you want to reset the settings to their default values?</string>
	<string name="reset_setting_success">The settings have been reset.</string>
	<string name="debug_mode">Debug mode</string>
	<string name="debug_mode_summary_on">Debug mode activated.</string>
	<string name="debug_mode_summary_off">Debug mode is disabled.</string>
	<string name="debug_mode_main">The main</string>
	<string name="attachment">to add a file</string>
	<string name="choice_mode">Select a method for receiving the file.</string>
	<string name="close">Close</string>
	<string name="image">Image</string>
	<string name="camera">Camera</string>
	<string name="album">Gallery</string>
	<string name="choice_image">Select image</string>
	<string name="permissions_not_granted">Insufficient permissions for</string>
	<string name="more">More details</string>
	<string name="location">Geolocation</string>
	<string name="permission_location">Insufficient permissions to use geolocation.</string>
	<string name="route_item_subtitle">Available assignments</string>
	<string name="info">Information</string>
	<string name="result_delete">Delete results</string>
	<string name="route_list_empty">The route list is empty.</string>
	<string name="point_list_empty">No waypoints found in the route.</string>
	<string name="search">Search</string>
	<string name="attention">Attention</string>
	<string name="action_share">Share this</string>
	<string name="low">Short</string>
	<string name="high">High</string>
	<string name="in_work">Received</string>
	<string name="exported">Exported</string>
	<string name="description">Description</string>
	<string name="geo_quality">Geolocation signal quality</string>
	<string name="image_quality">Image quality</string>
	<string name="image_height">Image height</string>
	<string name="history">History</string>
	<string name="attach">Attached file</string>
	<string name="params">Options</string>
	<string name="search_not_result">The search has not given any results.</string>
	<string name="create">Create</string>
	<string name="create_point">Create point</string>
	<string name="point_name">Name or address</string>
	<string name="point_description">Brief description of the point</string>
	<string name="map">Map</string>
	<string name="my_coordinate">I AM</string>
	<string name="address">The address</string>
	<string name="done">Done</string>
	<string name="global_error">Route ID not found.</string>
	<string name="validate_empty">Required field.</string>
	<string name="create_point_error">Unknown error while creating a point.</string>
	<string name="create_point_error2">Geolocation is required to create a point.</string>
	<string name="remove_point_error">Unknown point deletion error.</string>
	<string name="remove_route_error">Unknown error deleting route.</string>
	<string name="remove">Delete</string>
	<string name="result_remove">Delete the work result?</string>
	<string name="results_remove">Delete work results?</string>
	<string name="remove_result_error">Unknown error deleting result.</string>
	<string name="point_remove">Delete a previously created point?</string>
	<string name="route_remove">Delete a previously completed route?</string>
	<string name="task">Exercise</string>
	<string name="result">Result</string>
	<string name="result_choice_desc">What result of work to fix?</string>
	<string name="byt">byte</string>
	<string name="kb">KB</string>
	<string name="mb">MB</string>
	<string name="gb">GB</string>
	<string name="tb">TB</string>
	<string name="unknown">unknown</string>
	<string name="check">Confirmed</string>
	<string name="uncheck">Not confirmed</string>
	<string name="comment">A comment</string>
	<string name="attach_remove">Delete the previously created file?</string>
	<string name="attach_not_found">File not found.</string>
	<string name="camera_error">File upload error.</string>
	<string name="import_name">Import</string>
	<string name="import_txt">Importing tasks from a file</string>
	<string name="import_zip">Archive import</string>
	<string name="import_layout">Importing a template</string>
	<string name="import_run">Import data?</string>
	<string name="import_error1">Error deleting mistakenly created route.</string>
	<string name="import_error2">Error creating route from text file.</string>
	<string name="template_default">Default</string>
	<string name="unknown_error">Unknown error. Code</string>
	<string name="zip_error">Compression directory not found</string>
	<string name="unzip_error">Output directory error. Code</string>
	<string name="export_route_error_readme">An error occurred while forming the route description.</string>
	<string name="export_route_error_id">An error occurred while generating the route identifier.</string>
	<string name="export_route_error_name">An error occurred while forming the route name.</string>
	<string name="export_route_error_settings">An error occurred while generating route settings.</string>
	<string name="export_route_error_tags">An error occurred while generating route labels.</string>
	<string name="export_route_error_points">An error occurred while forming route points.</string>
	<string name="export_route_error_results">An error occurred while generating route results.</string>
	<string name="export_route_error_not_found_zip">No archive found.</string>
	<string name="route_update_error">Error updating route status.</string>
	<string name="layout_import_error">Template import error.</string>
	<string name="layout_remove_error">Template deletion failed.</string>
	<string name="unpack">Unpacking the file …</string>
	<string name="copy_data">Copying data …</string>
	<string name="read_data">Reading data …</string>
	<string name="web">Website</string>
	<string name="attach_require">The route requires file attachments.</string>
	<string name="location_require">The route requires attaching geolocation to the result.</string>
	<string name="export_route_title">Transfer of the result of work along the route {0} from {1}.</string>
	<string name="pack">Archiving data …</string>
	<string name="result_save_error1">Error updating attachments.</string>
	<string name="result_save_error2">Error saving result.</string>
	<string name="result_save_error3">Route point update failed.</string>
	<string name="result_save_error4">An attached file is required to save the result. Go to image selection?</string>
	<string name="result_save_error5">To save the result, you need to attach a geolocation.</string>
	<string name="files">Files</string>
	<string name="create_route_docs">To create a route, use the instructions from the site {0}.</string>
	<string name="demo_route">Demo route</string>
	<string name="demo_route_empty">No data found for the demo route.</string>
	<string name="profile">Profile</string>
	<string name="demo_route_create">An internet connection and geolocation access are required to create a demo route.</string>
	<string name="demo_route_question">Do you want to create a route?</string>
	<string name="demo_route_created">The demo route has been created.</string>
	<string name="go">Go to</string>
	<string name="demo_route_create_summary">Creating a demo route …</string>
	<string name="network_not_found">The network was not found.</string>
	<string name="location_search">Finding your current location …</string>
</resources>