<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_imports"
            android:icon="@drawable/ic_baseline_save_alt_24"
            android:title="@string/import_name" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>

    <group android:id="@+id/navigationDrawerGroup">
        <item
            android:id="@+id/nav_home_page"
            android:icon="@drawable/ic_baseline_open_in_browser_24"
            android:title="@string/web" />
    </group>
</menu>