<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/route_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/route_list_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:text="@string/route_list_empty"
        android:textColor="?attr/colorSecondary"
        android:visibility="gone"
        android:layout_marginStart="@dimen/indent_16"
        android:layout_marginEnd="@dimen/indent_16"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_demo_route"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorBackgroundFloating"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/indent_16"
            android:text="@string/demo_route_create_summary"
            android:textSize="@dimen/font_16"
            app:layout_constraintBottom_toTopOf="@id/create_demo_route_undo"/>

        <Button
            android:id="@+id/create_demo_route_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/undo"
            android:layout_margin="@dimen/indent_16"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="?attr/colorOnSecondary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>