<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_48">

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/location" />

    <TextView
        android:id="@+id/location_coordinate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/location_icon"
        app:layout_constraintEnd_toStartOf="@id/location_map"
        android:layout_marginStart="@dimen/indent_8"
        android:layout_marginEnd="@dimen/indent_8"
        android:textColor="?android:attr/textColorSecondary"
        tools:text="10.000000 : 11.000000"/>

    <com.mobwal.home.ui.global.HorizontalProgressLayout
        android:id="@+id/location_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/location_icon"
        app:layout_constraintEnd_toStartOf="@id/location_map"
        android:layout_marginStart="@dimen/indent_8"
        android:layout_marginEnd="@dimen/indent_8"
        app:title="@string/location_search"/>

    <ImageButton
        android:id="@+id/location_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/map"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_map_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>